maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:35: error: identifier expected but 'override' found.
def override gauche() : Boolean ={
    ^